# Open-Toolkit-for-Underwater-Field-Robotics

./: README.md
Control and Power Management Electronics/: README.md  SOFTWARE_README.md
Control and Power Management Electronics/Battery board/: BOM_Battery-board_2025-01-23.csv
Control and Power Management Electronics/Main board/: BOM_Main-board_2025-01-23.csv
ROS2 Software Stack/: README.md  README.md.txt
ROS2 Software Stack/bringup/: package.xml  setup.py
ROS2 Software Stack/bringup/launch/: rrr_actuators.launch.py  rrr_main.launch.py  rrr_sensors.launch.py
ROS2 Software Stack/dht11/: package.xml  setup.cfg  setup.py
ROS2 Software Stack/dht11/dht11/: dht11_singlesensor.py
ROS2 Software Stack/launch/: rrr_main.launch.py  rrr_sensors.launch.py
ROS2 Software Stack/ltc2945/: package.xml  setup.py
ROS2 Software Stack/ltc2945/ltc2945/: ltc2945.py
ROS2 Software Stack/ms5837/ms5837/: ms5837.py
ROS2 Software Stack/ms8607/: package.xml
ROS2 Software Stack/ms8607/ms8607/: ms8607.py  ms8607_i2c0.py  ms8607_i2c1.py
ROS2 Software Stack/rrr_interfaces/: CMakeLists.txt  package.xml
ROS2 Software Stack/rrr_manipulator/: CMakeLists.txt  package.xml
ROS2 Software Stack/rrr_manipulator/config/: rrr_controllers.yaml
ROS2 Software Stack/rrr_manipulator/description/: rrr_manipulator.xacro  rrr_manipulator_constants.xacro
ROS2 Software Stack/rrr_manipulator/scripts/: forward_position_publisher.py
ROS2 Software Stack/silver_interfaces/: package.xml
ROS2 Software Stack/silver_interfaces/msg/: Dhtarray.msg
ROS2 Software Stack/torches/: setup.cfg
ROS2 Software Stack/torches/torches/: torches_control.py
Silver Workspace/: cheatsheet.sh
Silver Workspace/dht11/launch/: dht11_launch.py
Silver Workspace/ms5837/: setup.py
Silver Workspace/rrr_manipulator/: CMakeLists.txt  package.xml
Silver Workspace/rrr_manipulator/description/: rrr_manipulator.xacro
Silver Workspace/rrr_manipulator/launch/: robot_ros2_control.launch.py  test_joint_trajectory_controller.launch.py
Silver Workspace/rrr_manipulator/scripts/: leg_math.py  publisher_joint_trajectory_controller.py  silver_follow_joint_position_trajectory_action.py
Silver Workspace/silver/config/: silver_leg_joint_trajectory_publisher.yaml
Silver Workspace/silver/description/: silver.xacro
Silver Workspace/silver/launch/: test_joint_trajectory_controller.launch.py
Silver Workspace/silver/scripts/: test_right_legs_kine.py
Underwater Robotic Joint/: README.md  README_MECH.md
Underwater Robotic Joint/UW Robotic Joint Assembly SolidWorks/: CannisterV1_new_version.SLDASM  M2o5x10.SLDPRT  M2o5x20.SLDPRT  M2x5.SLDPRT  M4x16.SLDPRT  Penetrator 8mm.SLDPRT  Penetrator nut.SLDPRT  WTM 1018 010.SLDPRT  X-430_CVR_CABLE.sldprt  X-430_IDLE.sldprt  X-430_IDLE_20160516_ASM.sldasm  X-430_SPACER_RING.sldprt  albero 2.SLDPRT  bronzina m10.SLDPRT  cannister cylinder.SLDPRT  molla a tazza misumi 123020123007.SLDPRT  mortor attachment.SLDPRT  penetratore2.SLDPRT  retention_ring_10mm.SLDPRT  rondella M4.SLDPRT  tappo contatti.SLDPRT  tappo frontale.SLDPRT
Underwater Robotic Joint/Underwater Robotic Joint Files for Manufacturing/: mortor attachment.STL
silver_ws/: long_test.py
silver_ws/dynamixel/: .gitignore
silver_ws/launch/: silver_mainboard_actuators.launch.py
silver_ws/ms8607/: setup.cfg
silver_ws/ms8607/ms8607/: ms8607_ryker1991.py
silver_ws/silver/: useful terminal commands.txt
silver_ws/silver/description/: gazebo_control.xacro  ros2_control_silver.xacro
silver_ws/silver/launch/: rviz_joint_gui.launch.py  sim_silver.launch.py
silver_ws/torches/: package.xml
(+28 files in other folders)
