<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dht11</name>
  <version>0.0.0</version>
  <description>ROS2 node to read and publish data from the temperature and humidity sensor dht11</description>
  <maintainer email="giacomo.picardi1991@gmail.com">silvercore</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>silver_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
